--- a/отчет.html
+++ b/отчет.html
@@ -14,17 +14,14 @@
   
   <h2>Список членов команды и разработанных модулей</h2>
   <ul>
-    <li>Березовский Антон - разработка системы проверки валидности введенного символа</li>
-    <li>Роман Ананьев - разработка логики игры</li>
+    <li>Березовский Антон - разработка системы проверки валидности введенного символа, разработка модуля main</li>
+    <li>Роман Ананьев - разработка логики игры (модуль check_win), скрам-мастер, написание документации, написание отчета</li>
     <li>Ленкевич Павел - создание канбан-доски, разработка заголовочного файла</li>
     <li>Гармель Артём - разрабокта игрового поля</li>
-    <li>Илья Павлович - тестирование и оталдка</li>
-    <li>Илья Тихомиров - тестирование и отладка</li>
+    <li>Илья Павлович - разработка модуля статистики игроков</li>
+    <li>Илья Тихомиров - разработка модуля длительности игры</li>
   </ul>
-  <h2>Документация</h2>
+  <h2>Документация</h2> 
   <p>Документация проекта доступна в репозитории на GitHub: <a href="https://github.com/p0znyaks/tic-tac-toe">https://github.com/p0znyaks/tic-tact-toe</a></p>
-  
-  <h2>Другое</h2>
-  <p>В процессе работы над проектом были использованы следующие инструменты: C++ компилятор, Git для контроля версий кода.</p>
 </body>
 </html>
