--- a/отчет.html
+++ b/отчет.html
@@ -16,7 +16,7 @@
   <ul>
     <li>Березовский Антон - разработка системы проверки валидности введенного символа, разработка модуля main</li>
     <li>Роман Ананьев - разработка логики игры (модуль check_win), скрам-мастер, написание документации, написание отчета</li>
-    <li>Ленкевич Павел - создание канбан-доски, разработка заголовочного файла</li>
+    <li>Ленкевич Павел - создание канбан-доски, разработка заголовочного файла, тестирование и откладка</li>
     <li>Гармель Артём - разрабокта игрового поля</li>
     <li>Илья Павлович - разработка модуля статистики игроков</li>
     <li>Илья Тихомиров - разработка модуля длительности игры</li>
